<resources>
    <string name="app_name">FirstPrototype</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">Log In</string>
    <string name="desc1">No longer ashes,Your rebirth has started</string>
    <string name="rising_high">RISING HIGH</string>
    <string name="choose">Choose from the following areas</string>
    <string name="categories">Categories</string>
    <string name="web_ndevelopment">Web \nDevelopment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_age">age</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="create_a_phoenix_code_account">Create a Phoenix code account ?</string>
    <string name="login_logo">login_logo</string>
    <string name="powered_by_bytecode">Powered By ByteCode™</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_listview1">listview_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_x">SplashX</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>